# srsinst.sr860

./: .gitignore  README.md  getting_started.ipynb  pyproject.toml
srsinst/sr860/: __init__.py  __main__.py  sr860 with sr542.taskconfig  sr860.taskconfig
srsinst/sr860/instruments/: __init__.py  components.py  get_instruments.py  keys.py  sr860.py  sr865.py  sr865a.py  visainterface.py  vxi11interface.py
srsinst/sr860/plots/: timeplot.py  twobytwosharexplot.py
srsinst/sr860/tasks/: assignparametertochannel.py  autofunctiontask.py  auxoutputtask.py  configurereferencetask.py  configuresineoutputtask.py  datatransferfromdatachannelstask.py  scanauxout1task.py  scanauxout2task.py  scanfrequencytask.py  scanrefamplitudetask.py  scanrefoffsettask.py  selecttimebasetask.py  setreferencetochoptask.py  setreferencetodualtask.py  setreferencetoexternaltask.py  setreferencetoexternalwithsr542task.py  setreferencetointernaltask.py  sidntesttask.py  signaltocurrentmodetask.py  signaltovoltagemodetask.py  simulatedplot.py  streamingtask.py
