
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "srsinst.sr860"
authors = [
    {name = "Chulhoon Kim"},
]
description = "Instrument driver package for the Lock-In Amplifiers, SR860 series from Stanford Research Systems"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["SR860", "SR865A", "SRS", "Stanford Research Systems", "lock-in amplifier"]
license = {text = "MIT license"}
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Scientific/Engineering"
]
dependencies = [
    "numpy", "python-vxi11", "srsgui>=0.4.5",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "srsinst.sr860.__version__"}

[project.optional-dependencies]
full = ['matplotlib >= 3.6.2', 'pyside6']
# For Dependency specification, Refer to PEP 631

[project.urls]
homepage = "https://github.com/thinkSRS/srsinst.sr860"
repository = "https://github.com/thinkSRS/srsinst.sr860.git"

[project.scripts]
sr860 = "srsinst.sr860.__main__:main"
